# aria

./: .gitignore  pyproject.toml
aria/: __init__.py
aria/allsmt/: mathsat_solver.py
aria/automata/cfl/: CFGR.py  CNF.py  SCR.py  cfl_dtc.py  cfl_solver.py  dtc.py  grammar.py  graph.py  matrix.py  pag_matrix.py  sc_solver.py
aria/automata/cflobdd/: README.md  __init__.py  bitwuzlainterface.py  btor2.py  bvdd.py  cflobvdd.py  fixpoint.py  grammar.py  pushdown.py  relation.py  witness.py  z3interface.py
aria/bool/: README.md
aria/bool/features/: sat_instance.py
aria/bool/knowledge_compiler/: __init__.py  dimacs_parser.py  dnnf.py  dtree.py  obdd.py
aria/cli/: README.md  efmc_cli.py  efsmt_cli.py  fmldoc_cli.py  polyhorn_cli.py  smt_server_cli.py  unsat_core_cli.py
aria/counting/bool/: dimacs_counting.py
aria/efmc/tests/: test_cli_efmc.py  test_farkas_lemma.py  test_putinar_lemma.py
aria/ml/llmtools/: AGENTS.md  README.md  __init__.py  client.py  local_client.py  routing.py  tooling.py
aria/proof/: __init__.py
aria/proof/abduction/: README.md  __init__.py  abductor.py  abductor_parser.py  belief_revision.py  cvc5_sygus_abduct.py  dillig_abduct.py  qe_abduct.py  utils.py
aria/proof/interpolant/: README.md  __init__.py  cvc5_interpolant.py  pysmt_interpolant.py  smtinterpol_interpolant.py
aria/proof/unsat_core/: README.md  __init__.py  marco.py  mss.py  musx.py  optux.py  unsat_core.py
aria/pyomt/: README.md  __init__.py  bin_solver.py  omt_solver.py
aria/pyomt/omtarith/: arith_opt_lp.py
aria/pyomt/omtbv/: bv_opt_utils.py
aria/pyomt/omtfp/: __init__.py  fp_opt_iterative_search.py  fp_opt_multiobj.py  fp_opt_utils.py
aria/pyomt/tests/: test_arith_helpers.py  test_bin_solver_paths.py  test_boxed_bvopt.py  test_bv_module_helpers.py  test_cli_and_msa.py  test_fpopt_iter_search.py  test_omt_solver_dispatch.py
aria/quant/: efsmt_utils.py
aria/quant/eflira/: eflira_parallel.py
aria/quant/qe/: README.md  qe_fm.py  qe_lme_parallel.py
aria/quant/ufbv/: runner.py
aria/smt/fol/: README.md  __init__.py
aria/smt/pcdclt/: eval_smt.py  solver.py
aria/smt/unification/: README.md  __init__.py  core.py  dispatch.py  match.py  more.py  utils.py  variable.py
aria/srk/: abstract.py  bigtop.py  coordinateSystem.py  expPolynomial.py  interpretation.py  iteration.py  linear_advanced.py  linear_utils.py  loop.py  lts.py  nonlinear.py  pathexpr.py  polynomial.py  quantifier.py  smt.py  solvablePolynomial.py  srkParse.py  srkSimplify.py  srkSmtlib2.py  srkSmtlib2Lex.py  srkSmtlib2Parse.py  srkZ3.py  syntax.py  termination.py  terminationDTA.py  terminationExp.py  terminationLLRF.py  transition.py  transitionSystem.py  vas.py  vass.py  wedge.py  weightedGraph.py
aria/srk/tests/: test_bigtop.py  test_iteration.py  test_linear.py  test_polynomial.py  test_quantifier.py  test_smt.py  test_solvablePolynomial.py  test_syntax.py  test_termination.py  test_termination_completion.py  test_transition.py  test_vass.py  test_wedge.py
aria/synthesis/cvc5/: sygus_inv.py
aria/tests/: test_abduction_parser.py  test_abduction_parser_examples.py  test_belief_revision.py  test_bool_counting.py  test_bool_qbf.py  test_bv_counting.py  test_cflobdd_reachability.py  test_cli_fmldoc.py  test_cli_unsat_core.py  test_dnnf.py  test_dtree.py  test_llmtools.py  test_obdd.py  test_sygus_inv.py  test_translator_regressions.py
aria/utils/global_params/: README.md  __init__.py  paths.py
aria/utils/solver/: smtlib.py  z3plus.py
aria/utils/srk/: __init__.py  abstract.py  algebra.py  apron.py  bigO.py  bigtop.py  cache.py  chc.py  compressedWeightedForest.py  coordinateSystem.py  disjointSet.py  expPolynomial.py  featureTree.py  fixpoint.py  fourierMotzkin.py  interpretation.py  interval.py  iteration.py  linear.py  linear_advanced.py  linear_utils.py  log.py  lts.py  memo.py  nonlinear.py  polyhedron.py  polynomial.py  qQ.py  quantifier.py  randomFormula.py  ring.py  sequence.py  smt.py  solvablePolynomial.py  sparseMap.py  srkAst.py  srkLex.py  srkParse.py  srkParseNew.py  srkSimplify.py  (+18 more)
aria/utils/translator/: README.md  __init__.py  cnf2lp.py  cnf2smt.py  dimacs2smt.py  opb2smt.py  parsing.py  qbf2smt.py  qcir2smt.py  registry.py  smt2c.py  smt2dimacs.py  smt2sympy.py  sygus2smt.py  wcnf2smt.py  wcnf2z3.py
aria/utils/z3/: expr.py
benchmarks/FP/: README.md
docs/source/: global_params.rst  index.rst
docs/source/abstraction/: symbolic_abstraction.rst
docs/source/cli-tools/: c_frontend.rst  cli.rst  translator.rst
docs/source/getting-started/: quickref.rst  tutorial.rst  verification-tutorial.rst
docs/source/logic-and-solving/: fol.rst  srk.rst  unification.rst  unsat_core.rst
docs/source/proofs-and-explanations/: abduction.rst  interpolant.rst  itp.rst
examples/: README.md
examples/aria-api/: 03_unsat_core_example.py  06_abduction_example.py  07_prob_wmc_example.py  12_unification_example.py
examples/prob/: README.md  __init__.py
examples/prob/api/: __init__.py  query.py
scripts/efmc_eval/: run_efmc_verifiers.py
(+119 files in other folders)
