[project]
name = "aria"
version = "0.1.0"
description = "A library for various automated reasoning tasks including SMT solving, model counting, and symbolic computation."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "rainoftime", email = "rainoftime@gmail.com" }]
keywords = [
    "automated-reasoning",
    "smt",
    "satisfiability",
    "model-counting",
    "symbolic-computation",
    "theorem-proving",
    "constraint-solving",
    "maxsat",
    "z3",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing :: Formal Verification",
]

dependencies = [
    "PySMT==0.9.7.dev356",
    "z3-solver==4.12.0",
    "sympy",
    "python-sat==1.9.dev1",
    "pyapproxmc==4.1.24",
    "six>=1.16.0",
    "psutil~=5.9.0",
    #"pytest~=7.1.0",
    "pytest-cov",
    "tqdm==4.65.0",
    "requests==2.32.3",
    "setuptools~=70.0.0",
    "lark==1.2.2",
    "pyparsing",
    "Pyro4",
    "frozendict",
    "tiktoken",
    "multipledispatch==1.0.0",
    "toolz==1.0.0",
    "numpy",
    "networkx",
    "unified-planning",
    "up-pyperplan",
    "hypothesis",
    "loguru",
    "openai",
]

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/ZJU-PL/aria"
Documentation = "https://zju-pl.github.io/aria"
Repository = "https://github.com/ZJU-PL/aria"
Issues = "https://github.com/ZJU-PL/aria/issues"
Changelog = "https://github.com/ZJU-PL/aria/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "flake8>=6.0",
    "pre-commit>=3.0",
    "build>=1.0",
    "twine>=4.0",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.hatch.build.targets.wheel]
packages = ["aria"]

[tool.hatch.build.targets.sdist]
include = [
    "/aria",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/RELEASE.md",
    "/CONTRIBUTING.md",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aria*"]
exclude = ["aria.tests*", "aria.benchmarks*", "aria.examples*"]


[project.scripts]
aria-smt-server = "aria.cli.smt_server_cli:main"
aria-pyomt = "aria.cli.pyomt_cli:main"
aria-mc = "aria.cli.mc_cli:main"
aria-efsmt = "aria.cli.efsmt_cli:main"
aria-efmc-efsmt = "aria.cli.efmc_efsmt_cli:main"
aria-fmldoc = "aria.cli.fmldoc_cli:main"
aria-maxsat = "aria.cli.maxsat_cli:main"
aria-unsat-core = "aria.cli.unsat_core_cli:main"
aria-allsmt = "aria.cli.allsmt_cli:main"
aria-efmc = "aria.cli.efmc_cli:main"
aria-polyhorn = "aria.cli.polyhorn_cli:main"
aria-pypmt = "aria.cli.pypmt_cli:main"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

# Configure stub paths
mypy_path = "stubs"

# Ignore missing imports for z3 since we have custom stubs
[[tool.mypy.overrides]]
module = "z3"
ignore_missing_imports = true

[tool.basedpyright]
typeCheckingMode = "standard"
reportDeprecated = false
reportUnusedImport = false
reportImportCycles = false
reportUnsupportedDunderAll = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportMissingParameterType = false
reportMissingTypeArgument = false
reportUnusedCallResult = false
reportImplicitOverride = false
reportAny = false
reportUnnecessaryComparison = false
reportPrivateUsage = false
reportCallInDefaultInitializer = false
reportUnannotatedClassAttribute = false
reportUnusedVariable = false
reportUnusedFunction = false
reportUnusedParameter = false


[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["aria"]
python_files = ["test_*.py", "*_test.py"]
log_cli = true
log_cli_level = "CRITICAL"
log_cli_format = "%(message)s"
log_file = "pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = ["ignore::RuntimeWarning:unittest.case:597"]
